<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/bmi_background"
        android:contentDescription="@string/imgDesc"
        android:scaleType="fitXY"
        android:id="@+id/imgBmi"
        />

    <!-- BMI Calculator -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="17dp"
        />

    <!-- Weight  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/weight"
        android:textSize="23sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/weightHint"
        app:cornerRadius="12dp"
        android:textAlignment="center"
        android:inputType="number"
        android:id="@+id/weight"
        />

    <!-- Height (in feet) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/heightFeet"
        android:textSize="23sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/heightFeetHint"
        app:cornerRadius="12dp"
        android:textAlignment="center"
        android:inputType="number"
        android:id="@+id/heightFeet"
        />

    <!-- Height (in inch) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/heightInch"
        android:textSize="23sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/heightInchHint"
        app:cornerRadius="12dp"
        android:textAlignment="center"
        android:inputType="number"
        android:id="@+id/heightInch"
        />

    <!-- BMI Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBMI"
        app:cornerRadius="14dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnBMI"
        android:backgroundTint="#00A03E"
        android:padding="14dp"
        android:textSize="18sp"
        />

     <!-- Result -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/result"
         android:textSize="31sp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_marginTop="24dp"
         android:id="@+id/result"
        />
</LinearLayout>